--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "nuxt": "^1.0.0",
-    "sass-loader": "^7.0.3",
-    "vue-scrollto": "^2.11.0"
+    "sass-loader": "^7.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
