--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@nuxtjs/moment": "^1.0.0",
+    "@nuxtjs/pwa": "^2.0.8",
     "bootstrap-vue": "^2.0.0-rc.11",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "nuxt": "^1.0.0",
-    "sass-loader": "^7.0.3"
+    "sass-loader": "^7.0.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
