--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.0.0",
     "@nuxtjs/pwa": "^2.0.8",
     "bootstrap-vue": "^2.0.0-rc.11",
